--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "deploy": "node scripts/gh-pages-deploy.js",
+    "gh-pages-deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
+    "execa": "latest",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "execa": "latest"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "^4.5.12",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "chalk": "^4.0.0",
+    "execa": "^4.0.0",
+    "node-emoji": "^1.10.0",
+    "vue-cli-plugin-gh-pages-auto-deploy": "~0.4.0"
   }
 }
