--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "deploy": "node scripts/gh-pages-deploy.js",
-    "gh-pages-deploy": "node scripts/gh-pages-deploy.js"
+    "deploy": "node scripts/gh-pages-deploy.js"
+  
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
@@ -22,7 +22,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "chalk": "^4.0.0",
     "execa": "^4.0.0",
-    "node-emoji": "^1.10.0",
-    "vue-cli-plugin-gh-pages-auto-deploy": "~0.4.0"
+    "node-emoji": "^1.10.0"
+    
   }
 }
